# nxs-enigma

./: LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: build.yml
assets/art/: title_art.txt
assets/data/: env_variables.json  sqlite3_data_file.db
builds/: README.md
scripts/: build.py
src/controllers/: database_controller.py
src/misc/: config.py  resize_window.py
src/scripts/: init_user.py
src/tui/states/: default_state.py  greetings_state.py  login_state.py
src/tui/states/old/: login_screen.py  welcome_screen.py
src/tui/window_transformations/: error_state.py  login_state.py  main_state.py
src/tui/window_transformations/old/: error_screen.py
src/tui/windows/: empty_window.py  stateful_window.py
