[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enigma_cli"
version = "v1.1.1"
description = "A reliable Credentials Manager CLI Application: it targets CLI environments, via its beautiful TUI interface and respectable encryption practices."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Túlio Horta", email = "tuliofh01@gmail.com" }
]
dependencies = [
  "requests>=2.32,<3",
  "PyYAML>=6,<7",
  "Pillow>=10,<11",
  "cryptography>=45.0,<46",
  "pycryptodome>=3.20,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "mypy>=1,<2",
  "nuitka>=2.0",
]

[project.scripts]
enigma = "enigma_cli.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
exclude = ["src.tui.window_transformations.old*"]

[tool.setuptools.package-data]
src = ["assets/**/*"]

[tool.nuitka]
profile = "standard"